<resources>
    <string name="app_name">Поиск рейсов</string>
    <string name="no_favorites">Нет избранных рейсов. Добавьте рейсы в избранное</string>
    <string name="title_add_flight">Добавление рейса</string>
    <string name="departure_airport">Аэропорт вылета</string>
    <string name="arrival_airport">Аэропорт прибытия</string>
    <string name="hint_iata_or_name">Введите IATA или название</string>
    <string name="add_to_favorites">Добавить рейс в избранное</string>
    <string name="view_favorites">Смотреть избранные рейсы</string>
    <string name="favorites_title">Избранные рейсы</string>
    <string name="error_select_both">Выберите оба аэропорта</string>
    <string name="error_same_airport">Аэропорты должны быть разными</string>
    <string name="flight_added">Рейс добавлен в избранное</string>
    <string name="error_add">Ошибка добавления</string>
    <string name="error_search">Ошибка поиска</string>
    <string name="deleted_from_favorites">Удалено из избранного</string>
    <string name="error_delete">Ошибка удаления</string>
    <string name="flight_info_template">Рейс: ✈ %s | Пассажиров: %d</string>
    <string name="airport_format">%s - %s</string>
    <string name="passengers_per_year">Пассажиров в год: %d</string>
    <string name="delete_description">Удалить</string>
</resources>